manifests/ingress-28.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-e309"
    labels:
        app: "diaggarw-e309"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarwa895-diaggarw-e309.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-e309"
                servicePort: 8080
